2007-01-25  Peter Johanson  <peter@peterjohanson.com>

	* configure.in: Fix breakage introduced when removing the gstreamer
	0.8 support.

2007-01-24  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:
	* deps/dbus-sharp/Makefile.in:
	* libmuine/Makefile.am:
	* libmuine/player-gst-0.8.c:

	Remove the old Gstreamer 0.8 support, and bump to 0.8.7.99 post
	release.

2007-01-23  Alp Toker  <alp@atoker.com>

	* data/muine-dbus.pc.in: Remove old dbus-sharp from Requires.

2007-01-21  Peter Johanson  <peter@peterjohanson.com>

	* NEWS:
	* configure.in:

	Update with latest news, and bump to 0.8.7 for a new release.

2007-01-21  Peter Johanson  <peter@peterjohanson.com>

	* plugins:
	* src:
	* deps:
	* deps/dbus-sharp-glib:
	* deps/dbus-sharp:
	* libmuine:
	* libmuine/id3-vfs:

	Add a bunch of items to svn:ignore.

2007-01-20  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:

	Depend on Gtk# 2.6.

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/CellRendererText.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs: 

	Remove our CellRendererText hack, and use the real
	CellRendererText.Ellipsize property.

2007-01-20  Peter Johanson  <peter@peterjohanson.com>

	* TODO: Add item about using Gtk.StatusIcon eventually, and clean up a
	few items that are moot/changed since they were added.

2007-01-20  Peter Johanson  <peter@peterjohanson.com>

	* DBusLib/Player.cs: Fix bug #396624. We now return a 0 length byte
	array if no cover art is found, to work around a NDesk dbus-sharp bug.

2007-01-19  Peter Johanson  <peter@peterjohanson.com>

	* deps/dbus-sharp/Makefile: Remove accidentally added Makefile.

	* plugins/DashboardPlugin.cs:
	* plugins/Makefile.am:

	Remove the ancient Dashboard plugin.

2007-01-13  Kostas Papadimas <pkst@gnome.org>
	
	*configure.in: Added 'el' to ALL_LINGUAS

2007-01-10  Alp Toker  <alp@atoker.com>

	* deps/dbus-sharp/*: Update dbus-sharp sources with fix for events
	on interfaces.