@@ -76,6 +76,7 @@
 	      <property name="inverted">False</property>
 	      <property name="adjustment">0 0 0 0 0 0</property>
 	      <signal name="value_changed" handler="OnSongSliderValueChanged" last_modification_time="Tue, 04 Jan 2005 17:59:09 GMT"/>
+	      <signal name="key_press_event" handler="OnSongSliderKeyPressEvent" last_modification_time="Thu, 25 Jan 2007 21:41:12 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
